core/unpackaged/main/default/objects/ZVC__Avoid_Trigger_Setting__mdt/ZVC__Avoid_Trigger_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Avoid Trigger Setting</label>
    <pluralLabel>Avoid Trigger Settings</pluralLabel>
</CustomObject>