core/unpackaged/main/default/objects/ZVC__Avoid_Trigger_Setting__mdt/fields/ZVC__Avoid_CampaignMember_Trigger__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Avoid_CampaignMember_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is deprecated, please use the other field
        “Avoid_CampaignMember_Trigger_Active__c” to enable/disable the campaign member trigger.</description>
    <label>Avoid CampaignMember Trigger(Deprecated)</label>
    <type>Checkbox</type>
</CustomField>