core/unpackaged/main/default/objects/ZVC__Avoid_Trigger_Setting__mdt/fields/ZVC__Avoid_CampaignMember_Trigger_Active__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Avoid_CampaignMember_Trigger_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this is enabled then it should disable the trigger logic for campaign member completely.</description>
    <label>Avoid CampaignMember Trigger</label>
    <type>Checkbox</type>
</CustomField>