core/unpackaged/main/default/objects/ZVC__Avoid_Trigger_Setting__mdt/fields/ZVC__Avoid_Meeting_Trigger__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Avoid_Meeting_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Avoid Meeting Trigger</label>
    <type>Checkbox</type>
</CustomField>