core/unpackaged/main/default/objects/ZVC__Avoid_Trigger_Setting__mdt/fields/ZVC__Avoid_Webinar_Tigger__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Avoid_Webinar_Tigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Avoid Webinar Tigger</label>
    <type>Checkbox</type>
</CustomField>