core/unpackaged/main/default/objects/ZVC__Avoid_Trigger_Setting__mdt/fields/ZVC__Name__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Name__c</fullName>
    <label>Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>